--- a/LaTeX/bibliography.bib
+++ b/LaTeX/bibliography.bib
@@ -1,3 +1,6 @@
+% copy citation from https://Scholar.Google.com
+% or generate using e.g. https://truben.no/latex/bibtex
+
 @article{holzer1993training,
   title={Are training subsidies for firms effective? The Michigan experience},
   author={Holzer, Harry J and Block, Richard N and Cheatham, Marcus and Knott, Jack H},
@@ -7,4 +10,12 @@
   pages={625--636},
   year={1993},
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@book{wooldridge2015introductory,
+  title={Introductory econometrics: A modern approach},
+  author={Wooldridge, Jeffrey M},
+  year={2019},
+  edition={7},
+  publisher={Cengage Learning}  
 }
