--- a/LaTeX/preample/packages.tex
+++ b/LaTeX/preample/packages.tex
@@ -1,7 +1,7 @@
 \usepackage[utf8]{inputenx} % Input encoding 'Latin 1' (ISO-8859-1)
 \usepackage{lmodern,textcomp} % latin modern recognizes euro symbol €
 \usepackage[T1]{fontenc} % encoding for special characters, e.g. ü and ñ
-\usepackage[english]{babel} % multilingual language support, add ',danish'
+\usepackage[danish,english]{babel} % multilingual language support
 
 % GRAPHICS
 \usepackage{caption} % customize captions
@@ -18,13 +18,13 @@
 % \usepackage{placeins} % keeps floats within their section
 
 % MATH
-% \usepackage{amsmath} % \eqref and other math enhancements
+\usepackage{amsmath} % align by &, \eqref, and other math enhancements
 % \usepackage{amssymb} % extra math symbols
-% \usepackage{bm} % bold math symbols
+\usepackage{bm} % bold math symbols
 % \usepackage{cancel} % cross-out math https://tex.stackexchange.com/a/75530
 
 % PAGE LAYOUT
-\usepackage[top=30mm, bottom=30mm, margin=30mm]{geometry} % set margins
+\usepackage[margin=30mm, top=20mm, bottom=20mm]{geometry} % set margins
 % \usepackage{lscape} % rotate page page content
 % \usepackage{pdflscape} % display page as landscape
 
@@ -34,7 +34,7 @@
 % \usepackage{tabularx} % use 'X' for equal column width
 
 % TEXT
-\usepackage{blindtext} % text example
+% \usepackage{blindtext} % text example
 % \usepackage{xcolor} % more colors
 % \definecolor[named]{darkgreen}{HTML}{008000}
 % \usepackage[shortlabels]{enumitem} % customize \begin{enumerate}[A)], [a)], or [(i)] for A), a), or (i)
