--- a/LaTeX/sections/results.tex
+++ b/LaTeX/sections/results.tex
@@ -1,15 +1,9 @@
-\section{Results and discussion}
-
-\subsection{Results}
+\section{Results}
 \label{s:results}
-\Tref{tab:results} below shows OLS estimation results for the different models which all use the same sample described in \tref{tab:descriptive} and \ref{tab:descriptive_yearly} above.
-
 \begin{table}
     \centering
-    \caption{Estimation results} \label{tab:results}
+    \caption{Estimation of scrap rates}
+    \label{t:results}
     \input{tables/results}
 \end{table}
-
-\subsection{Discussion}
-\label{s:discussion}
-\blindtext
+\Tref{t:results} above shows OLS estimation results for the different models outlined in \sref{s:model}, which all use the same sample described in \tref{t:descriptive} and \ref{t:descriptive_yearly} in \sref{s:data_descriptive}.
