--- a/LaTeX/tables/results.tex
+++ b/LaTeX/tables/results.tex
@@ -15,5 +15,7 @@ Time trend          &               &     -0.2480   &               &           
 Firm dummies        &          No   &          No   &         Yes   &          No   &          No   \\
 \hline
 R$^2$               &      0.0173   &      0.0173   &      0.9276   &      0.2010   &      0.2010   \\
-Observations        &         162   &         162   &         162   &         162   &         162   \\
+Obs.                &         162   &         162   &         162   &         162   &         162   \\
+Number of firms     &               &               &               &          54   &          54   \\
+Obs. per firm       &               &               &               &           3   &           3   \\
 \hline\end{tabular}\\Standard errors in parentheses. *** p<0.01, ** p<0.05, * p<0.1
