--- a/LaTeX/sections/data.tex
+++ b/LaTeX/sections/data.tex
@@ -2,20 +2,24 @@
 \label{s:data}
 
 \subsection{Firm scrap rates and the MJOB program}
+\label{s:data_descriptive}
 \begin{quote}
     \enquote{
         \textit{The Michigan Job Opportunity Bank-Upgrade program was in effect during the years 1986-90. The program was designed to provide one-time training grants to eligible firms, defined as manufacturing companies with 500 or fewer employees that were implementing some type of new technology and were not past recipients of a grant.}
-    } \citep{holzer1993training}
+    }\\
+    \null\hfill - \citet{holzer1993training}
 \end{quote}
 
 \begin{table}
     \centering
-    \caption{Descriptive statistics} \label{tab:descriptive}
+    \caption{Descriptive statistics}
+    \label{t:descriptive}
     \input{tables/descriptive}
 \end{table}
 
 \begin{table}
     \centering
-    \caption{Descriptive statistics by year} \label{tab:descriptive_yearly}
+    \caption{Descriptive statistics by year}
+    \label{t:descriptive_yearly}
     \input{tables/descriptive_yearly}
 \end{table}
