--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -13,8 +13,11 @@
 \begin{document}
 \begin{titlingpage}
     \maketitle
+    \centering
+    \includegraphics[width=.5 \textwidth]{figures/Logo}
     % \begin{abstract}
     % \end{abstract}
+    \vfill % add vertical fill between elements
     \tableofcontents
 \end{titlingpage}
 
