--- a/LaTeX/preample/title_page.tex
+++ b/LaTeX/preample/title_page.tex
@@ -14,9 +14,9 @@
 %---------------------------------------------------------------
 \title{Stata example}
 
-\author{Thor Donsby Noe\thanks{
-  \textit{E-mail:} \href{mailto:Thor.Noe@econ.au.dk}{Thor.Noe@econ.au.dk}}
+\author{Thor Donsby Noe
+  \thanks{\textit{E-mail:} \href{mailto:Thor.Noe@econ.au.dk}{Thor.Noe@econ.au.dk}}
 }
-\affil{\small Aarhus University, Department of Economics and Business Economics}
+% \affil{\small Aarhus University, Department of Economics and Business Economics}
 
 \date{\today} % Use current date
