--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -4,7 +4,7 @@
 \input{preample/hyperlinks}
 \input{preample/notes}
 \input{preample/ref_commands}
-\input{preample/title_page}
+\input{preample/title_page} % edit title & author(s) in title_page.tex
 \addbibresource{bibliography.bib}
 
 %---------------------------------------------------------------
