--- a/LaTeX/bibliography.bib
+++ b/LaTeX/bibliography.bib
@@ -1,5 +1,5 @@
 % copy citation from https://Scholar.Google.com
-% or generate using e.g. https://truben.no/latex/bibtex
+% or generate from e.g. https://truben.no/latex/bibtex
 
 @article{holzer1993training,
   title={Are training subsidies for firms effective? The Michigan experience},
