--- a/LaTeX/sections/conclusion.tex
+++ b/LaTeX/sections/conclusion.tex
@@ -1,3 +1,6 @@
+% BRIEFLY EXPLAIN WHAT HAS BEEN DONE?
+% BRIEFLY DISCUSS MAIN RESULTS AND CONCLUSIONS
+% BRIEFLY DISCUSS LIMITATIONS AND POSSIBLE EXTENSIONS
 \section{Conclusion}
 \label{s:conclusion}
 The verdict on whether the estimated effects are significant is very sensitive to model choice. Identification of the effects of the training grant is further challenged by a low number of observations, large heterogeneity in scrap rates, and concerns about selection bias.
