--- a/LaTeX/sections/model.tex
+++ b/LaTeX/sections/model.tex
@@ -1,3 +1,7 @@
+% DESCRIPTION OF EMPIRICAL MODEL (SPECIFICATION AND VARIABLES)
+% IDENTIFICATION PROBLEMS SUCH AS UNOBSERVED VARIABLE BIAS OR ENDOGENEITY?
+% IDENTIFICATION STRATEGY FOR ESTIMATION OF THE PARAMETERS OF INTEREST
+% HYPOTHESIS TESTS
 \section{Empirical model}
 \label{s:model}
 As a baseline, I first consider a simple model of the scrap rate of firm $i$ in year $t$
