--- a/LaTeX/sections/results.tex
+++ b/LaTeX/sections/results.tex
@@ -1,3 +1,4 @@
+% INTERPRETATION OF RESULTS AND HYPOTHESIS TESTS (STATISTICAL SIGNIFICANCE?)
 \section{Results}
 \label{s:results}
 \begin{table}
@@ -6,4 +7,4 @@
     \label{t:results}
     \input{tables/results}
 \end{table}
-\Tref{t:results} above shows OLS estimation results for the different models outlined in \sref{s:model}, which all use the same sample described in \tref{t:descriptive} and \ref{t:descriptive_yearly} in \sref{s:data_descriptive}.
+\Tref{t:results} above shows OLS estimation results for the five different models outlined in \sref{s:model}, which all use the same data sample described in \tref{t:descriptive} and \ref{t:descriptive_yearly} in \sref{s:data_descriptive}.
