--- a/LaTeX/sections/intro.tex
+++ b/LaTeX/sections/intro.tex
@@ -15,5 +15,5 @@ Here I display the output of my \href{https://GitHub.com/ThorNoe/Stata_example}{
 % MAIN RESULTS
 
 
-% OVERVIEW OF THIS PAPER
+% STRUCTURE OF THIS PAPER
 I proceed with presenting the data in \sref{s:data}, empirical model in \sref{s:model}, and results in \sref{s:results} before discussion in \sref{s:discussion} and conclusion in \sref{s:conclusion}.
