--- a/LaTeX/sections/appendix.tex
+++ b/LaTeX/sections/appendix.tex
@@ -9,4 +9,5 @@
     \caption{Kernel density of scrap rates by treatment and year}
     \label{f:kernels}
     \includegraphics[width=1.0 \textwidth]{figures/kernels_combined}
+    \caption*{Note: Comparing scrap rates of the same two groups of firms (receiving the grant in 1988 vs never receiving the grant) for the years 1987 (panel A), 1988 (panel B), and 1989 (panel C).}
 \end{figure}
