--- a/LaTeX/sections/data.tex
+++ b/LaTeX/sections/data.tex
@@ -17,6 +17,7 @@
     \centering
     \caption{Descriptive statistics}
     \label{t:descriptive}
+    % \footnotesize % reduce text size
     \input{tables/descriptive}
 \end{table}
 
@@ -24,5 +25,6 @@
     \centering
     \caption{Descriptive statistics by year}
     \label{t:descriptive_yearly}
+    % \footnotesize % reduce text size
     \input{tables/descriptive_yearly}
 \end{table}
