--- a/LaTeX/sections/results.tex
+++ b/LaTeX/sections/results.tex
@@ -5,6 +5,7 @@
     \centering
     \caption{Estimation of scrap rates}
     \label{t:results}
+    % \footnotesize % reduce text size
     \input{tables/results}
 \end{table}
 \Tref{t:results} above shows OLS estimation results for the five different models outlined in \sref{s:model}, which all use the same data sample described in \tref{t:descriptive} and \ref{t:descriptive_yearly} in \sref{s:data_descriptive}.
